# geany-tab-style

./: Makefile  Makefile.am  Readme.md  clean-tree.sh  config.h.in  configure.ac  meson.build  package.sh
data/: xi-tweaks.conf
source/: auxiliary.cc  auxiliary.h  plugin.cc  plugin.h  prefs.cc  prefs.h
src/: plugin.c  plugin.cc  plugin.h  prefs.c  prefs.cc  prefs.h
